--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  </section>
  <!-- Pie de pagina -->
  <footer>
- (c) Aspectos Juridicos
+ (c) Evolucion y Mantenimiento del Software
  </footer>
 </body>
 </html> 
