--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset="utf-8"/>
 <title>BLOG</title>
  <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +19,8 @@
 
  <section>
  <b>Películas</b>
- <p>(Contenido)</p>
+ <p>Joaquin,F.,(1998),<i>La historia no contada de un Hulio</i>.Sevilla,España:ErBetih</p>
+ <p>Xin.G.,(1793),<i>Crónicas de una china en Argentina</i>.Buenos Aires,Argentina:Elmehtahepiando</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
