--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
  <!-- Contenido -->
  <section>
  <b>Libros</b>
- <p>(Contenido)</p>
+ <p>Joaquin,F.,(1998),<i>La historia no contada de un Hulio</i>.Sevilla,Españ¡º…rBetih</p>
+ <p>Xin.G.,(1793),<i>Cró®©£as de una china en Argentina</i>.Buenos Aires,Argentina:Elmehtahepiando</p>
  </section>
 
  <section>
- <b>Películas</b>
- <p>Joaquin,F.,(1998),<i>La historia no contada de un Hulio</i>.Sevilla,España:ErBetih</p>
- <p>Xin.G.,(1793),<i>Crónicas de una china en Argentina</i>.Buenos Aires,Argentina:Elmehtahepiando</p>
+ <b>Peliculas</b>
+ <p>Guillermo Del Toro<i>Pacific Rim</i>Maquinas contra bichos grandes</p>
+ <p>Johnny Knoxville<i>Jackass</i>Gente que hace el tonto</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
